<resources>
    <string name="app_name">Deudores App</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_create">Create</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_update">Update</string>
    <string name="digitenombre">Digite nombre</string>
    <string name="telefono">Telefono</string>
    <string name="cantidad">Digite cantidad</string>
    <string name="guardar">Guardar</string>
    <string name="title_read">Read</string>
    <string name="buscar">Buscar</string>
    <string name="update">Actualizar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="eliminar">Eliminar</string>
    <string name="title_delete">Eliminar</string>
    <string name="title_list">lista</string>
    <string name="tittle_delete">Delete</string>
    <string name="nombre">Nombre</string>
    <string name="nombredeldeudor">Nombre del Deudor</string>
    <string name="deuda">Deuda</string>
    <string name="contrasena">Password</string>
    <string name="correo">E-mail</string>

    <string-array name="paises">
        <item>Seleccione un Pais</item>
        <item>Brasil</item>
        <item>España</item>
        <item>Argentina</item>
        <item>colombia</item>
    </string-array>
</resources>