<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_gradient"
    tools:context=".ui.update.UpdateFragment" >

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/et_circular"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_nombre2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/digitenombre" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bt_buscar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bt_circular"
        android:text="@string/buscar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cont_telefono"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/et_circular"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefono"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cont_cantidad"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/et_circular"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_cantidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cantidad"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bt_actualizar"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bt_circular"
        android:text="@string/update" />
</LinearLayout>